--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,13 @@ body {
     text-decoration: none;
     color: white;
     text-align: center;
-    padding: 0.5rem 5rem 0.5rem;
+    padding: 2.5rem 5rem 2.5rem;
 }
 
 .nav-links:hover {
     background-color: white;
     color: black;
-
+    cursor: pointer;
 }
 
 .sub-head {
