--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,42 @@ body {
 }
 
 img {
-    filter: grayscale(70%);
     height: 25rem;
+}
+
+footer {
+    background-color: black;
+    text-align: center;
+    padding: 1rem;
+}
+
+.image-icon {
+    border-radius: 15rem;
+    height: 50px;
+    filter: saturate(100%);
+    margin: 0rem 2rem 0rem;
+}
+
+.foot {
+    position: fixed;
+    bottom: 0%;
+    width: 100%;
+}
+
+.copyright {
+    position: fixed;
+    bottom: -2%;
+    right: 0%;
+    color: white;
+    font-size: small;
+}
+
+.animation {
+    animation-name: text;
+    animation-duration: 4s;
+}
+
+@keyframes text {
+    0%{margin-top: 400px;}
+    100%{margin-top: 0px;}
 }
